src/index.css
@import "~normalize.css";
@import "~@blueprintjs/core/lib/css/blueprint.css";
@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
@import "~@fortawesome/fontawesome-free/css/all.css";
@import "~@blueprintjs/popover2/lib/css/blueprint-popover2.css";
@import "~@blueprintjs/select/lib/css/blueprint-select.css";
@import "~@blueprintjs/datetime/lib/css/blueprint-datetime.css";
@import "~@blueprintjs/datetime2/lib/css/blueprint-datetime2.css";



*:focus {
    outline: none;
}

.AppToaster .bp4-toast {
    font-size: 1.3em;
    padding: 0.3em;
}

